--- a/package.json
+++ b/package.json
@@ -10,7 +10,11 @@
   "license": "ISC",
   "dependencies": {
     "@playwright/test": "^1.38.1",
+    "dotenv": "^16.3.1",
     "lodash": "^4.17.21",
     "prettier": "^3.0.3"
+  },
+  "devDependencies": {
+    "@types/node": "^20.8.4"
   }
 }
